--- a/Batch_Structured_Streaming/Dockerfile
+++ b/Batch_Structured_Streaming/Dockerfile
@@ -1,8 +1,7 @@
 FROM mesosphere/spark:2.1.0-2.2.1-1-hadoop-2.6
 ENV SPARK_HOME /opt/spark/dist
-ENV SPARK_SUBMIT_PORT 5050
 ENV SPARK_CLASS com.sky.dap.App2
-ENV SPARK_MASTER mesos://leader.mesos
+ENV SPARK_MASTER mesos://10.74.51.194:5050
 ENV SPARK_JAVA_OPTS="-Dconfig.resource=test.conf -Dspark.mesos.driver.frameworkId=struct_str_avro_2.2.1"
 ENV SUBMIT_ARGS="--conf spark.executor.home=/opt/spark/dist \
 --conf spark.mesos.executor.docker.image=mesosphere/spark:2.1.0-2.2.1-1-hadoop-2.6 \
@@ -15,6 +14,6 @@ ENV SUBMIT_ARGS="--conf spark.executor.home=/opt/spark/dist \
 --conf spark.mesos.driver.frameworkId=driver-struct_str \
 --conf spark.app.name=struct-str_avro"
 ADD ./target/Batch_Structured_Streaming-1.0-SNAPSHOT-jar-with-dependencies.jar /Batch_Structured_Streaming-1.0-SNAPSHOT-jar-with-dependencies.jar
-CMD $SPARK_HOME/bin/spark-submit --master mesos://leader.mesos:5050 --deploy-mode cluster --class $SPARK_CLASS /Batch_Structured_Streaming-1.0-SNAPSHOT-jar-with-dependencies.jar
+CMD $SPARK_HOME/bin/spark-submit --master $SPARK_MASTER --deploy-mode client --class $SPARK_CLASS $SUBMIT_ARGS /Batch_Structured_Streaming-1.0-SNAPSHOT-jar-with-dependencies.jar
 
 
